Ajustes de parâmetros de retry

--- a/src/poc_sync_spot_instance_retry_api/appsettings.json
+++ b/src/poc_sync_spot_instance_retry_api/appsettings.json
@@ -1,5 +1,6 @@
 {
   "UrlApiSpotInstance": "http://localhost:5000/contador",
+  "Threshold": 4,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
