Reestrutura de nomes

--- a/src/poc_async_spot_instance_dlq_api/poc_spot_instance_dlq_api/appsettings.json
+++ b/src/poc_async_spot_instance_dlq_api/poc_spot_instance_dlq_api/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "UrlApiSpotInstance": "http://localhost:5273/SpotInstanceResponse",
+  "Threshold": 2,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
