--- a/src/poc_async_spot_instance_dlq_api/poc_spot_instance_dlq_api/poc_async_spot_instance_dlq_api.csproj
+++ b/src/poc_async_spot_instance_dlq_api/poc_spot_instance_dlq_api/poc_async_spot_instance_dlq_api.csproj
@@ -8,10 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.14" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Polly" Version="8.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\poc_spot_instance_dlq_broker\poc_spot_instance_dlq_broker.csproj" />
   </ItemGroup>
 
 </Project>
