--- a/src/poc_spot_instance_service_api/poc_spot_service_api/Dockerfile
+++ b/src/poc_spot_instance_service_api/poc_spot_service_api/Dockerfile
@@ -6,16 +6,16 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["poc_sync_spot_service_api/poc_sync_spot_service_api.csproj", "poc_sync_spot_service_api/"]
-RUN dotnet restore "poc_sync_spot_service_api/poc_sync_spot_service_api.csproj"
+COPY ["src/poc_spot_instance_service_api/poc_spot_service_api/poc_spot_service_api.csproj", "src/poc_spot_instance_service_api/poc_spot_service_api/"]
+RUN dotnet restore "src/poc_spot_instance_service_api/poc_spot_service_api/poc_spot_service_api.csproj"
 COPY . .
-WORKDIR "/src/poc_sync_spot_service_api"
-RUN dotnet build "poc_sync_spot_service_api.csproj" -c Release -o /app/build
+WORKDIR "src/poc_spot_instance_service_api/poc_spot_service_api/"
+RUN dotnet build "poc_spot_service_api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "poc_sync_spot_service_api.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "poc_spot_service_api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "poc_sync_spot_service_api.dll"]
+ENTRYPOINT ["dotnet", "poc_spot_service_api.dll"]
