Ajustes nos arquivos de configuração referente aos hosts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,22 @@
 version: '3.8'
 services:
-  poc-spot-instance-dlq-api:
+  dlq-producer:
    image: img-poc-spot-instance-dlq-api
    container_name: ctn-poc-spot-instance-dlq-api
    build:
      context: ./
      dockerfile: ./src/poc_async_spot_instance_dlq_api/poc_spot_instance_dlq_api/Dockerfile
    ports:
-     - "8080:80"
+     - "8080:80"   
+   restart: always
    depends_on:
-      - broker     
+     - backend  
+     - broker   
    networks:
+     - backend-network   
      - kafka-network
-     - spot-network
 
-  poc-spot-instance-dlq-consumer:
+  dlq-consumer:
    image: img-poc-spot-instance-dlq-consumer
    container_name: ctn-poc-spot-instance-dlq-consumer
    build:
@@ -22,23 +24,25 @@ services:
      dockerfile: ./src/poc_consumer_spot_instance_dlq/poc_consumer_spot_instance_dlq/Dockerfile
    ports:
      - "8081:80"
+   restart: always
    depends_on:
       - broker 
    networks:
      - kafka-network 
      
-  poc-spot-instance-service-api:
-   image: img-poc-spot-instance-service-api
-   container_name: ctn-poc-spot-instance-service-api
+  backend:
+   image: img-poc-spot-instance-backend
+   container_name: ctn-poc-spot-instance-backend
    build:
      context: ./
      dockerfile: ./src/poc_spot_instance_service_api/poc_spot_service_api/Dockerfile
    ports:
      - "8084:80"
+   restart: always
    networks:
-     - spot-network
+     - backend-network
        
-  poc-spot-instance-retry-api:
+  retry-api:
    image: img-poc-spot-instance-retry-api
    container_name: ctn-poc-spot-instance-retry-api
    build:
@@ -46,8 +50,11 @@ services:
      dockerfile: ./src/poc_sync_spot_instance_retry_api/poc_spot_instance_retry_api/Dockerfile
    ports:
      - "8083:80"
+   restart: always
+   depends_on:
+     - backend   
    networks:
-     - spot-network
+     - backend-network
      
   zookeeper:
     image: wurstmeister/zookeeper
@@ -78,12 +85,12 @@ services:
       - c:/docker.sock:/var/run/docker.sock
     networks:
      - kafka-network
-networks: 
+networks:
+    backend-network:
+      name: backend-network
     kafka-network:
       driver: bridge
-      name: kafka-network
-    spot-network:
-      driver: bridge
+      name: kafka-network    
 volumes:
   cache:
     driver: local
