--- a/src/poc_sync_spot_instance_retry_api/poc_spot_instance_retry_api/appsettings.json
+++ b/src/poc_sync_spot_instance_retry_api/poc_spot_instance_retry_api/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "UrlApiSpotInstance": "http://localhost:8084/api/SpotInstanceResponse",
+  "UrlApiSpotInstance": "http://backend:80/api/SpotInstanceResponse",
   "Threshold": 4,
   "Logging": {
     "LogLevel": {
