Desbloqueio de CORS

--- a/src/poc_sync_spot_instance_retry_api/poc_spot_instance_retry_api/appsettings.json
+++ b/src/poc_sync_spot_instance_retry_api/poc_spot_instance_retry_api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "UrlApiSpotInstance": "http://backend:80/api/SpotInstanceResponse",
   "Threshold": 4,
+  "AppSelector": "pocspot",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
