--- a/src/poc_sync_spot_instance_retry_api/poc_spot_instance_retry_api/poc_sync_spot_instance_retry_api.csproj
+++ b/src/poc_sync_spot_instance_retry_api/poc_spot_instance_retry_api/poc_sync_spot_instance_retry_api.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="KubernetesClient" Version="13.0.26" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.14" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Microsoft.ServiceFabric" Version="10.1.1951" />
     <PackageReference Include="Polly" Version="8.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
